--- a/stylesheets/theme.css
+++ b/stylesheets/theme.css
@@ -16,7 +16,7 @@
 .burger .two,
 .burger .three {
   margin-top: 3px;
-  background: #258ecd;
+  background: #b90748;
   width: 33px;
   height: 4px;
   position: absolute;
